overlays/kotlin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-frontend-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns01
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - notes-kotlin.end-soul.com
      secretName: notes-frontend-kotlin-tls
  rules:
    - host: notes-kotlin.end-soul.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kotlin-api-service
                port:
                  number: 5003
          - path: /
            pathType: Prefix
            backend:
              service:
                name: notes-frontend-service
                port:
                  number: 3000
